--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.mjs"
+    "dev": "nodemon index.mjs",
+    "build": "netlify deploy --prod"
   },
   "presets": [
     "@babel/preset-env"
